@@ -112,6 +112,7 @@ import org.eclipse.sw360.rest.resourceserver.vendor.Sw360VendorService;
 import org.eclipse.sw360.rest.resourceserver.vulnerability.Sw360VulnerabilityService;
 import org.eclipse.sw360.rest.resourceserver.vulnerability.VulnerabilityController;
 import org.jetbrains.annotations.NotNull;
+import org.jose4j.json.internal.json_simple.JSONObject;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.json.GsonJsonParser;
 import org.springframework.data.domain.Pageable;
@@ -130,6 +131,7 @@ import org.springframework.security.access.AccessDeniedException;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.util.FileCopyUtils;
 import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
@@ -157,6 +159,9 @@ import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import static org.eclipse.sw360.datahandler.common.CommonUtils.isNullEmptyOrWhitespace;
+import static org.eclipse.sw360.datahandler.common.CommonUtils.nullToEmptyList;
+import static org.eclipse.sw360.datahandler.common.CommonUtils.nullToEmptySet;
 import static org.eclipse.sw360.datahandler.common.CommonUtils.wrapThriftOptionalReplacement;
 import static org.eclipse.sw360.datahandler.common.WrappedException.wrapTException;
 import static org.eclipse.sw360.datahandler.permissions.PermissionUtils.makePermission;
@@ -1556,7 +1561,7 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
             if (!selectedReleaseAndAttachmentIds.containsKey(releaseLinkId)) {
                 selectedReleaseAndAttachmentIds.put(releaseLinkId, new HashMap<>());
             }
-            final List<Attachment> attachments = releaseLink.getAttachments();
+            final List<Attachment> attachments = nullToEmptyList(releaseLink.getAttachments());
             Release release = componentService.getReleaseById(releaseLinkId, sw360User);
             for (final Attachment attachment : attachments) {
                 String attachemntContentId = attachment.getAttachmentContentId();
@@ -1643,7 +1648,7 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
     ) throws TException {
         final User sw360User = restControllerHelper.getSw360UserFromAuthentication();
         final Project sw360Project = projectService.getProjectForUserById(id, sw360User);
-        Set<Attachment> attachments = sw360Project.getAttachments();
+        Set<Attachment> attachments = nullToEmptySet(sw360Project.getAttachments());
         sw360User.setCommentMadeDuringModerationRequest(comment);
         Attachment updatedAttachment = attachmentService.updateAttachment(attachments, attachmentData, attachmentId, sw360User);
         if (!restControllerHelper.isWriteActionAllowed(sw360Project, sw360User) && comment == null) {
@@ -1696,7 +1701,7 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
         final Project project = projectService.getProjectForUserById(projectId, sw360User);
         final String filename = "Clearing-Reports-" + project.getName() + ".zip";
 
-        final Set<Attachment> attachments = project.getAttachments();
+        final Set<Attachment> attachments = nullToEmptySet(project.getAttachments());
         final Set<AttachmentContent> clearingAttachments = new HashSet<>();
         for (final Attachment attachment : attachments) {
             if (attachment.getAttachmentType().equals(AttachmentType.CLEARING_REPORT)) {
@@ -2220,9 +2225,11 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
                 releasesSrc = releaseIds.stream().map(relId -> wrapTException(() -> {
                     final Release sw360Release = releaseService.getReleaseForUserById(relId, sw360User);
                     releaseService.setComponentDependentFieldsInRelease(sw360Release, sw360User);
-                    List<Attachment> sourceAttachments = sw360Release.getAttachments().stream()
-                        .filter(attachment -> attachment.getAttachmentType() == AttachmentType.SOURCE || attachment.getAttachmentType() == AttachmentType.SOURCE_SELF)
-                        .collect(Collectors.toList());
+                    List<Attachment> sourceAttachments = nullToEmptySet(sw360Release.getAttachments()).stream()
+                        .filter(attachment ->
+                                attachment.getAttachmentType() == AttachmentType.SOURCE ||
+                                        attachment.getAttachmentType() == AttachmentType.SOURCE_SELF)
+                        .toList();
                     Set<Attachment> sourceAttachmentsSet = new HashSet<>(sourceAttachments);
                     sw360Release.setAttachments(sourceAttachmentsSet);
                     return sourceAttachmentsSet.isEmpty() ? null : sw360Release;
@@ -2234,9 +2241,11 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
                 releasesSrc = releaseIds.stream().map(relId -> wrapTException(() -> {
                     final Release sw360Release = releaseService.getReleaseForUserById(relId, sw360User);
                     releaseService.setComponentDependentFieldsInRelease(sw360Release, sw360User);
-                    List<Attachment> withoutSourceAttachments = sw360Release.getAttachments().stream()
-                        .filter(attachment -> attachment.getAttachmentType() != AttachmentType.SOURCE && attachment.getAttachmentType() != AttachmentType.SOURCE_SELF)
-                        .collect(Collectors.toList());
+                    List<Attachment> withoutSourceAttachments = nullToEmptySet(sw360Release.getAttachments()).stream()
+                        .filter(attachment ->
+                                attachment.getAttachmentType() != AttachmentType.SOURCE &&
+                                        attachment.getAttachmentType() != AttachmentType.SOURCE_SELF)
+                        .toList();
                     Set<Attachment> withoutSourceAttachmentsSet = new HashSet<>(withoutSourceAttachments);
                     sw360Release.setAttachments(withoutSourceAttachmentsSet);
                     return withoutSourceAttachmentsSet.isEmpty() ? null : sw360Release;
@@ -2248,7 +2257,7 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
                 releasesSrc = releaseIds.stream().map(relId -> wrapTException(() -> {
                     final Release sw360Release = releaseService.getReleaseForUserById(relId, sw360User);
                     releaseService.setComponentDependentFieldsInRelease(sw360Release, sw360User);
-                    return sw360Release.getAttachments().isEmpty() ? sw360Release : null;
+                    return nullToEmptySet(sw360Release.getAttachments()).isEmpty() ? sw360Release : null;
                 }))
                 .filter(Objects::nonNull)
                 .collect(Collectors.toList());
@@ -2257,7 +2266,7 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
                 releasesSrc = releaseIds.stream().map(relId -> wrapTException(() -> {
                     final Release sw360Release = releaseService.getReleaseForUserById(relId, sw360User);
                     releaseService.setComponentDependentFieldsInRelease(sw360Release, sw360User);
-                    return sw360Release.getAttachments().isEmpty() ? null : sw360Release;
+                    return nullToEmptySet(sw360Release.getAttachments()).isEmpty() ? null : sw360Release;
                 }))
                 .filter(Objects::nonNull)
                 .collect(Collectors.toList());
@@ -2266,9 +2275,9 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
                 releasesSrc = releaseIds.stream().map(relId -> wrapTException(() -> {
                     final Release sw360Release = releaseService.getReleaseForUserById(relId, sw360User);
                     releaseService.setComponentDependentFieldsInRelease(sw360Release, sw360User);
-                    List<Attachment> cliAttachments = sw360Release.getAttachments().stream()
+                    List<Attachment> cliAttachments = nullToEmptySet(sw360Release.getAttachments()).stream()
                         .filter(attachment -> attachment.getAttachmentType() == AttachmentType.COMPONENT_LICENSE_INFO_XML || attachment.getAttachmentType() == AttachmentType.COMPONENT_LICENSE_INFO_COMBINED)
-                        .collect(Collectors.toList());
+                        .toList();
                     Set<Attachment> cliAttachmentsSet = new HashSet<>(cliAttachments);
                     sw360Release.setAttachments(cliAttachmentsSet);
                     return cliAttachmentsSet.isEmpty() ? null : sw360Release;
@@ -3166,7 +3175,7 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
     ) throws TException {
         User sw360User = restControllerHelper.getSw360UserFromAuthentication();
         Project sw360Project = projectService.getProjectForUserById(id, sw360User);
-        if(sw360Project.getLicenseInfoHeaderText().isEmpty()){
+        if (isNullEmptyOrWhitespace(sw360Project.getLicenseInfoHeaderText())) {
             sw360Project.setLicenseInfoHeaderText(projectService.getLicenseInfoHeaderText());
         }
         Map<String, String> sortedExternalURLs = CommonUtils.getSortedMap(sw360Project.getExternalUrls(), true);
@@ -3680,5 +3689,64 @@ public class ProjectController implements RepresentationModelProcessor<Repositor
             }
             return true;
         };
+    }
+
+    @Operation(
+            summary = "Add licenses to linked releases of a project.",
+            description = "This API adds license information to linked releases of a project by processing the approved CLI attachments for each release. It categorizes releases based on the number of CLI attachments (single, multiple, or none) and updates their main and other licenses accordingly.",
+            tags = {"Project"},
+                    parameters = {
+                            @Parameter(
+                                name = "projectId",
+                                description = "The ID of the project whose linked releases need license updates.",
+                                required = true,
+                                example = "12345",
+                                schema = @Schema(type = "string")
+                            )
+                        },
+            responses = {
+                    @ApiResponse(
+                            responseCode = "200",
+                            description = "License information successfully added to linked releases.",
+                            content = @Content(
+                            mediaType = "application/hal+json",
+                            schema = @Schema(type = "object", implementation = JSONObject.class),
+                            examples = @ExampleObject(
+                                     value = "{\"message\": \"License information successfully added to linked releases.\" }"
+                            )
+                        )
+                    ),
+                    @ApiResponse(
+                            responseCode = "500",
+                            description = "Error occurred while processing license information for linked releases.",
+                            content = @Content(
+                                mediaType = "application/json",
+                                examples = @ExampleObject(
+                                    value = "{\n  \"error\": \"Error adding license info to linked releases.\"\n}"
+                                )
+                            )
+                        )
+          }
+    )
+    @RequestMapping(value = PROJECTS_URL + "/{id}/addLinkedRelesesLicenses", method = RequestMethod.POST)
+    public ResponseEntity<String> addLicenseToLinkedReleases(
+            @Parameter(description = "Project ID", example = "376576")
+            @PathVariable("id") String projectId
+    ) throws TException, ResourceClassNotFoundException {
+        try {
+            User sw360User = restControllerHelper.getSw360UserFromAuthentication();
+
+            RequestStatus requestStatus = projectService.addLicenseToLinkedReleases(projectId, sw360User);
+
+            if (requestStatus == RequestStatus.SUCCESS) {
+                return ResponseEntity.ok("License information successfully added to linked releases.");
+            } else {
+                return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Failed to add license information to linked releases.");
+            }
+        } catch (ResourceNotFoundException e) {
+            throw new ResourceClassNotFoundException(e.getMessage());
+        } catch (SW360Exception sw360Exp) {
+            throw new RuntimeException(sw360Exp.getWhy());
+        }
     }
 }
